testdata/prettier/w-string-double-quote.out
Lexical/Parse error: "./testdata/prettier/w-string-double-quote.goat" (line 3, column 18):
unexpected identifier: "afasdf"
