testdata/prettier/w-string-double-quote.goat
proc main()
begin
write "safsdfsfs"afasdf";
  write "Test\n";
end
